# TriBench

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  run.md  run.txt
.github/workflows/: docs.yml
commands/: index.html
demos/: report.html
docs/: commands.md  getting-started.md  index.md  slides.html  slides.md  slides_wrapper.md
dummy_kernel/: meta.json  reference.py  triton_impl.py
getting-started/: index.html
gpubench/: bench.py  cli.py  gen.py  meta.py  metrics.py  registry.py  types.py
kernels/add_silu/: meta.json  reference.py  triton_impl.py
kernels/baddbmm/: meta.json  reference.py  triton_impl.py
kernels/cross_entropy/: meta.json  reference.py  triton_impl.py
kernels/cumsum/: meta.json  reference.py  triton_impl.py
kernels/flash_attn/: meta.json  reference.py  triton_impl.py
kernels/fused_add_rms_norm/: meta.json  reference.py  triton_impl.py
kernels/fused_add_tanh/: meta.json  reference.py  triton_impl.py
kernels/fused_linear_ce/: meta.json  reference.py  triton_impl.py
kernels/fused_linear_jsd/: meta.json  reference.py  triton_impl.py
kernels/fused_softmax/: bench_entry.py  meta.json  reference.py  test_correctness.py  triton_impl.py
kernels/geglu/: meta.json  reference.py  triton_impl.py
kernels/group_norm/: meta.json  (+2 more)
scripts/: run_suite.py
search/: search_index.json
slides/: index.html
slides_wrapper/: index.html
tests/: test_meta_schema.py
tribench/: bench.py  cli.py  correctness.py  env.py  errors.py  eval_metrics.py  gen.py  io.py  meta.py  metrics.py  registry.py  types.py  viz.py
(+56 files in other folders)
