[project]
name = "gpubench"
version = "0.1.0"
description = "GPU Kernel Benchmark Suite: reproducible, extensible benchmarking for Triton kernels"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "torch>=2.0",
    "triton>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
gpubench = "gpubench.cli:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gpubench*"]
